--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,11 +1,10 @@
 .container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  flex-direction: column;
 
-  max-width: 1170px;
+  max-width: 1024px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 20px;
 }
